# sdl2-crossplatform-app

./: .gitignore  CMakeLists.txt  README.md  build.sh  builder.py  simple_shell.html
src/: CMakeLists.txt  main.cpp
src/renderloop/: CMakeLists.txt  renderloop.cpp  renderloop.hpp
